--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!-- Custom CSS -->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 	<!-- font-awesome icons -->
-	<link href="css/fontawesome-all.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.0/css/all.css" integrity="sha384-aOkxzJ5uQz7WBObEZcHvV5JvRW3TUc2rNPA7pe3AwnsUohiw1Vj2Rgx2KSOkF5+h" crossorigin="anonymous">
 	<!-- //Custom Theme files -->
 	<!--webfonts-->
 	<link href="//fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
