--- a/views/soon.ejs
+++ b/views/soon.ejs
@@ -197,14 +197,14 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             <!-- footer top row -->
             <div class="row py-5">
                 <div class="col-md-4">
-                    <img src="images/f1.png" alt="" class="img-fluid">
+                    <img src="https://cdn.glitch.com/3b9b03a9-82e6-44b5-8b93-5e0e237c8d29%2Ff1.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">Email and Live chat
                         <span>24/7</span>
                     </h4>
                     <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
                 </div>
                 <div class="col-md-4 my-md-0 my-4">
-                    <img src="images/f2.png" alt="" class="img-fluid">
+                    <img src="https://cdn.glitch.com/3b9b03a9-82e6-44b5-8b93-5e0e237c8d29%2Ff2.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">any query or clarifiactions?
                         <span>call us</span>
                     </h4>
@@ -212,7 +212,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <p>+ 10 000 12346 </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/f3.png" alt="" class="img-fluid">
+                    <img src="https://cdn.glitch.com/3b9b03a9-82e6-44b5-8b93-5e0e237c8d29%2Ff3.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">creative thoughts
                         <span>informatics</span>
                     </h4>
