🎍🐈 Checkpoint ./app.js:1886802/195 ./.glitch-assets:1886802/10940

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -257,7 +257,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-lg-6 order-lg-1 order-0">
 						<h3 class="agile-title text-lg-right">Financial Services Core Customer Centric Approach</h3>
 						<div class="w3ls-abt">
-							<img src="images/banner2.png" alt="" class="img-fluid" />
+							<img src="<%= assetsUrl %>banner2.png" alt="" class="img-fluid" />
 						</div>
 					</div>
 					<!-- //about right grid -->
@@ -328,7 +328,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-lg-3 col-6 team-grids">
 						<div class="our-team">
 							<div class="pic">
-								<img src="images/t2.jpg" alt="team member" class="img-fluid" />
+								<img src="<%= assetsUrl %>t2.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
 								<h3 class="title">Peter Johns</h3>
@@ -350,7 +350,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-lg-3 col-6 team-grids">
 						<div class="our-team active">
 							<div class="pic">
-								<img src="images/t1.jpg" alt="team member" class="img-fluid" />
+								<img src="<%= assetsUrl %>t1.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
 								<h3 class="title">Kelli Smith</h3>
@@ -372,7 +372,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-lg-3 col-6 team-grids mt-lg-0 mt-4">
 						<div class="our-team">
 							<div class="pic">
-								<img src="images/t4.jpg" alt="team member" class="img-fluid" />
+								<img src="<%= assetsUrl %>t4.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
 								<h3 class="title">Peter Johns</h3>
@@ -394,7 +394,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<div class="col-lg-3 col-6 team-grids mt-lg-0 mt-4">
 						<div class="our-team">
 							<div class="pic">
-								<img src="images/t3.jpg" alt="team member" class="img-fluid" />
+								<img src="<%= assetsUrl %>t3.jpg" alt="team member" class="img-fluid" />
 							</div>
 							<div class="content">
 								<h3 class="title">Peter Johns</h3>
@@ -504,14 +504,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<!-- footer top row -->
 			<div class="row py-5">
 				<div class="col-md-4">
-					<img src="images/f1.png" alt="" class="img-fluid">
+					<img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
 					<h4 class="feed-title my-3">Email and Live chat
 						<span>24/7</span>
 					</h4>
 					<p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
 				</div>
 				<div class="col-md-4 my-md-0 my-4">
-					<img src="images/f2.png" alt="" class="img-fluid">
+					<img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
 					<h4 class="feed-title my-3">any query or clarifiactions?
 						<span>call us</span>
 					</h4>
@@ -519,7 +519,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					<p>+ 10 000 12346 </p>
 				</div>
 				<div class="col-md-4">
-					<img src="images/f3.png" alt="" class="img-fluid">
+					<img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
 					<h4 class="feed-title my-3">creative thoughts
 						<span>informatics</span>
 					</h4>
