--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -212,9 +212,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                 <div class="row no-gutters">
                     <div class="col-md-4 proj_gallery_grid">
                         <div class="section_1_gallery_grid">
-                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g3.jpg">
+                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g3.jpg">
                                 <div class="section_1_gallery_grid1">
-                                    <img src="images/g3.jpg" alt=" " class="img-fluid" />
+                                    <img src="<%= assetsUrl %>g3.jpg" alt=" " class="img-fluid" />
                                     <div class="proj_gallery_grid1_pos">
 
                                     </div>
@@ -224,9 +224,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="row no-gutters">
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g6.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g6.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g6.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g6.jpg" alt=" " class="img-fluid" />
                                             <div class="proj_gallery_grid1_pos">
 
                                             </div>
@@ -236,9 +236,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                             </div>
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g5.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g5.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g5.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g5.jpg" alt=" " class="img-fluid" />
                                             <div class="proj_gallery_grid1_pos">
 
                                             </div>
@@ -248,9 +248,9 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                             </div>
                         </div>
                         <div class="section_1_gallery_grid">
-                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g7.jpg">
+                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g7.jpg">
                                 <div class="section_1_gallery_grid1">
-                                    <img src="images/g7.jpg" alt=" " class="img-fluid" />
+                                    <img src="<%= assetsUrl %>g7.jpg" alt=" " class="img-fluid" />
                                     <div class="proj_gallery_grid1_pos">
 
                                     </div>
@@ -262,63 +262,63 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="row no-gutters">
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g1.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g1.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g1.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g1.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g7.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g7.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g7.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g7.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                         </div>
                         <div class="section_1_gallery_grid">
-                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g8.jpg">
+                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g8.jpg">
                                 <div class="section_1_gallery_grid1">
-                                    <img src="images/g8.jpg" alt=" " class="img-fluid" />
+                                    <img src="<%= assetsUrl %>g8.jpg" alt=" " class="img-fluid" />
                                 </div>
                             </a>
                         </div>
                         <div class="row no-gutters">
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g4.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g4.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g4.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g4.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g5.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g5.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g5.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g5.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g6.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g6.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g6.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g6.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g7.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g7.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g7.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g7.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
@@ -327,36 +327,36 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-4 proj_gallery_grid">
                         <div class="section_1_gallery_grid">
-                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g5.jpg">
+                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g5.jpg">
                                 <div class="section_1_gallery_grid1">
-                                    <img src="images/g5.jpg" alt=" " class="img-fluid" />
+                                    <img src="<%= assetsUrl %>g5.jpg" alt=" " class="img-fluid" />
                                 </div>
                             </a>
                         </div>
                         <div class="row no-gutters">
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g6.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g6.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g6.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g6.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                             <div class="col-6 proj_gallery_grid">
                                 <div class="section_1_gallery_grid">
-                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g3.jpg">
+                                    <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g3.jpg">
                                         <div class="section_1_gallery_grid1">
-                                            <img src="images/g3.jpg" alt=" " class="img-fluid" />
+                                            <img src="<%= assetsUrl %>g3.jpg" alt=" " class="img-fluid" />
                                         </div>
                                     </a>
                                 </div>
                             </div>
                         </div>
                         <div class="section_1_gallery_grid">
-                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="images/g4.jpg">
+                            <a title="Donec sapien massa, placerat ac sodales ac, feugiat quis est." href="<%= assetsUrl %>g4.jpg">
                                 <div class="section_1_gallery_grid1">
-                                    <img src="images/g4.jpg" alt=" " class="img-fluid" />
+                                    <img src="<%= assetsUrl %>g4.jpg" alt=" " class="img-fluid" />
                                 </div>
                             </a>
                         </div>
@@ -373,14 +373,14 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             <!-- footer top row -->
             <div class="row py-5">
                 <div class="col-md-4">
-                    <img src="images/f1.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">Email and Live chat
                         <span>24/7</span>
                     </h4>
                     <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
                 </div>
                 <div class="col-md-4 my-md-0 my-4">
-                    <img src="images/f2.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">any query or clarifiactions?
                         <span>call us</span>
                     </h4>
@@ -388,7 +388,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <p>+ 10 000 12346 </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/f3.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">creative thoughts
                         <span>informatics</span>
                     </h4>
