--- a/views/services.ejs
+++ b/views/services.ejs
@@ -297,14 +297,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!-- footer top row -->
             <div class="row py-5">
                 <div class="col-md-4">
-                    <img src="images/f1.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">Email and Live chat
                         <span>24/7</span>
                     </h4>
                     <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
                 </div>
                 <div class="col-md-4 my-md-0 my-4">
-                    <img src="images/f2.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">any query or clarifiactions?
                         <span>call us</span>
                     </h4>
@@ -312,7 +312,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <p>+ 10 000 12346 </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/f3.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">creative thoughts
                         <span>informatics</span>
                     </h4>
