--- a/views/blog3_style1.ejs
+++ b/views/blog3_style1.ejs
@@ -256,7 +256,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row mt-3">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img2.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img2.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -269,7 +269,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row my-3">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img5.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img5.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -282,7 +282,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img4.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img4.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -295,7 +295,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row my-3">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img3.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img3.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -316,7 +316,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="card">
                             <div class="card-header p-0">
                                 <a href="single">
-                                    <img class="card-img-bottom" src="images/img2.jpg" alt="Card image cap">
+                                    <img class="card-img-bottom" src="<%= assetsUrl %>img2.jpg" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -344,7 +344,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="card">
                             <div class="card-header p-0">
                                 <a href="single">
-                                    <img class="card-img-bottom" src="images/img5.jpg" alt="Card image cap">
+                                    <img class="card-img-bottom" src="<%= assetsUrl %>img5.jpg" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -372,7 +372,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="card">
                             <div class="card-header p-0">
                                 <a href="single">
-                                    <img class="card-img-bottom" src="images/img4.jpg" alt="Card image cap">
+                                    <img class="card-img-bottom" src="<%= assetsUrl %>img4.jpg" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -400,7 +400,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="card">
                             <div class="card-header p-0">
                                 <a href="single">
-                                    <img class="card-img-bottom" src="images/img5.jpg" alt="Card image cap">
+                                    <img class="card-img-bottom" src="<%= assetsUrl %>img5.jpg" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -428,7 +428,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="card">
                             <div class="card-header p-0">
                                 <a href="single">
-                                    <img class="card-img-bottom" src="images/img3.jpg" alt="Card image cap">
+                                    <img class="card-img-bottom" src="<%= assetsUrl %>img3.jpg" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -456,7 +456,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                         <div class="card">
                             <div class="card-header p-0">
                                 <a href="single">
-                                    <img class="card-img-bottom" src="images/img2.jpg" alt="Card image cap">
+                                    <img class="card-img-bottom" src="<%= assetsUrl %>img2.jpg" alt="Card image cap">
                                 </a>
                             </div>
                             <div class="card-body">
@@ -491,14 +491,14 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             <!-- footer top row -->
             <div class="row py-5">
                 <div class="col-md-4">
-                    <img src="images/f1.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">Email and Live chat
                         <span>24/7</span>
                     </h4>
                     <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
                 </div>
                 <div class="col-md-4 my-md-0 my-4">
-                    <img src="images/f2.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">any query or clarifiactions?
                         <span>call us</span>
                     </h4>
@@ -506,7 +506,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <p>+ 10 000 12346 </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/f3.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">creative thoughts
                         <span>informatics</span>
                     </h4>
