--- a/views/blog_row_style2.ejs
+++ b/views/blog_row_style2.ejs
@@ -198,7 +198,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <a href="single">
-                                <img class="card-img-bottom" src="images/imgr4.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>imgr4.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-md-8">
@@ -230,7 +230,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <a href="single">
-                                <img class="card-img-bottom" src="images/imgr3.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>imgr3.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-md-8">
@@ -262,7 +262,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <a href="single">
-                                <img class="card-img-bottom" src="images/imgr2.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>imgr2.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-md-8">
@@ -294,7 +294,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row no-gutters">
                         <div class="col-md-4">
                             <a href="single">
-                                <img class="card-img-bottom" src="images/imgr5.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>imgr5.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-md-8">
@@ -388,7 +388,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row mt-3">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img2.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img2.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -401,7 +401,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row my-3">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img5.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img5.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -414,7 +414,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img4.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img4.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -427,7 +427,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <div class="row my-3">
                         <div class="col-4">
                             <a href="blog">
-                                <img class="card-img-bottom" src="images/img3.jpg" alt="Card image cap">
+                                <img class="card-img-bottom" src="<%= assetsUrl %>img3.jpg" alt="Card image cap">
                             </a>
                         </div>
                         <div class="col-8 pl-0">
@@ -449,14 +449,14 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
             <!-- footer top row -->
             <div class="row py-5">
                 <div class="col-md-4">
-                    <img src="images/f1.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">Email and Live chat
                         <span>24/7</span>
                     </h4>
                     <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
                 </div>
                 <div class="col-md-4 my-md-0 my-4">
-                    <img src="images/f2.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">any query or clarifiactions?
                         <span>call us</span>
                     </h4>
@@ -464,7 +464,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
                     <p>+ 10 000 12346 </p>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/f3.png" alt="" class="img-fluid">
+                    <img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
                     <h4 class="feed-title my-3">creative thoughts
                         <span>informatics</span>
                     </h4>
