--- a/views/single.ejs
+++ b/views/single.ejs
@@ -249,7 +249,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               </p>
             </div>
             <div class="col-md-6 mt-sm-0 my-4">
-              <img src="images/g1.jpg" alt="" class="img-fluid" />
+              <img src="<%= assetsUrl %>g1.jpg" alt="" class="img-fluid" />
             </div>
           </div>
           <div class="card-footer">
@@ -284,7 +284,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <!--  //contact form grid ends here -->
           </div>
           <div class="media py-5">
-            <img class="mr-3" src="images/m.png" alt="Generic placeholder image">
+            <img class="mr-3" src="<%= assetsUrl %>m.png" alt="Generic placeholder image">
             <div class="media-body">
               <h5 class="mt-0">Michael</h5>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
@@ -292,7 +292,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               </p>
               <div class="media mt-5">
                 <a class="pr-3" href="#">
-                  <img src="images/f.png" alt="Generic placeholder image">
+                  <img src="<%= assetsUrl %>f.png" alt="Generic placeholder image">
                 </a>
                 <div class="media-body">
                   <h5 class="mt-0">James</h5>
@@ -305,7 +305,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
               </div>
             </div>
             <div class="media">
-              <img class="mr-3" src="images/m.png" alt="Generic placeholder image">
+              <img class="mr-3" src="<%= assetsUrl %>m.png" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0">Jack</h5>
                 <p> Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin.
@@ -382,7 +382,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="row mt-3">
                           <div class="col-4">
                             <a href="blog">
-                              <img class="card-img-bottom" src="images/img2.jpg" alt="Card image cap">
+                              <img class="card-img-bottom" src="<%= assetsUrl %>img2.jpg" alt="Card image cap">
                             </a>
                           </div>
                           <div class="col-8 pl-0">
@@ -395,7 +395,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="row my-3">
                           <div class="col-4">
                             <a href="blog">
-                              <img class="card-img-bottom" src="images/img5.jpg" alt="Card image cap">
+                              <img class="card-img-bottom" src="<%= assetsUrl %>img5.jpg" alt="Card image cap">
                             </a>
                           </div>
                           <div class="col-8 pl-0">
@@ -408,7 +408,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="row">
                           <div class="col-4">
                             <a href="blog">
-                              <img class="card-img-bottom" src="images/img4.jpg" alt="Card image cap">
+                              <img class="card-img-bottom" src="<%= assetsUrl %>img4.jpg" alt="Card image cap">
                             </a>
                           </div>
                           <div class="col-8 pl-0">
@@ -421,7 +421,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <div class="row my-3">
                           <div class="col-4">
                             <a href="blog">
-                              <img class="card-img-bottom" src="images/img3.jpg" alt="Card image cap">
+                              <img class="card-img-bottom" src="<%= assetsUrl %>img3.jpg" alt="Card image cap">
                             </a>
                           </div>
                           <div class="col-8 pl-0">
@@ -445,14 +445,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                   <!-- footer top row -->
                   <div class="row py-5">
                     <div class="col-md-4">
-                      <img src="images/f1.png" alt="" class="img-fluid">
+                      <img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
                       <h4 class="feed-title my-3">Email and Live chat
                         <span>24/7</span>
                       </h4>
                       <p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
                     </div>
                     <div class="col-md-4 my-md-0 my-4">
-                      <img src="images/f2.png" alt="" class="img-fluid">
+                      <img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
                       <h4 class="feed-title my-3">any query or clarifiactions?
                         <span>call us</span>
                       </h4>
@@ -460,7 +460,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                       <p>+ 10 000 12346 </p>
                     </div>
                     <div class="col-md-4">
-                      <img src="images/f3.png" alt="" class="img-fluid">
+                      <img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
                       <h4 class="feed-title my-3">creative thoughts
                         <span>informatics</span>
                       </h4>
