🚞☔️ Checkpoint ./views/header.ejs:1886802/538 ./views/footer.ejs:1886802/1495

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -246,9 +246,9 @@
 	</div>
 	<!-- //subscribe form -->
 	<!-- js-->
-	<script src="js/jquery-2.2.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<!--  magnific-popup  -->
-	<script src="js/jquery.magnific-popup.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/jquery.magnific-popup.min.js" integrity="sha256-xnQyF8m1JWRtd/ab+4yuhZyBkeyTPI9crkWaM4sA/Ss=" crossorigin="anonymous"></script>
 	<script>
 		//script for magnific pop up (about section)
 		$(document).ready(function () {
@@ -274,7 +274,7 @@
 	<!--  necessary snippets for few javascript files -->
 	<script src="js/AVBank.js"></script>
 	<!-- Bootstrap Core JavaScript -->
-	<script src="js/bootstrap.js "></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
