--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,7 +23,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		}
 	</script>
 	<!-- Bootstrap Core CSS -->
-	<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- Magnific Popup -->
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css" integrity="sha256-vykRtEx/oLFzSrbwO4y0YkXO9988343rDJoa2MYpS3s=" crossorigin="anonymous" /> -->
 	<!-- popup box -->
 	<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
 	<!-- Custom CSS -->
