🔖🙄 Checkpoint ./views/footer.ejs:1886802/227 ./TODO.md:1886802/43 ./views/error.ejs:1886802/52

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -268,7 +268,7 @@
 	<!-- move-top -->
 	<script src="js/move-top.js"></script>
 	<!-- easing -->
-	<script src="js/easing.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.1.2/jquery.easing.min.js" integrity="sha256-NBEaYAimJN8qZWE/WaylrkyQpNRfiF1PNs77yHaLsnk=" crossorigin="anonymous"></script>
 	<!-- smooth scroll -->
 	<script src="js/SmoothScroll.min.js"></script>
 	<!--  necessary snippets for few javascript files -->
