👻🌱 Checkpoint ./views/accountPage.ejs:1886802/24 ./views/footer.ejs:1886802/132 ./views/partials/accountActions.ejs:1886802/167 ./views/partials/openAccount.ejs:1886802/210 ./views/partials/smsMfaModal.ejs:1886802/102

--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -16,7 +16,7 @@
 
     <div class="col-lg-2  bb-left">
       <div class="card w-100">
-        <img class="card-img-top" src="/images/userImage.jpg" alt="Card image cap">
+        <img class="card-img-top" src="<%= assetsUrl %>userImage.jpg" alt="Card image cap">
       </div>
 
     </div>
