🙈🚝 Checkpoint ./views/index.ejs:1886802/1

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 				<div class="slider-info">
 					<div class="agileinfo-logo">
 						<h3>
-							<span class="fab fa-linode text-center"></span> Investment management
+							<span class="fab fa-linode text-center"></span> Investments management
 						</h3>
 					</div>
 					<h3 class="txt-w3_agile"> Transform Your Dreams into Reality</h3>
