🎳🍙 Checkpoint ./views/about.ejs:1886802/21 ./views/single.ejs:1886802/56 ./public/js/twitterExample.js:1886802/22 ./public/js/simplyCountdown.js:1886802/22 ./public/js/formMfa.js:1886802/51 ./public/js/accountVue.js:1886802/117 ./public/css/popuo-box.css:1886802/22 ./public/css/simpleLightbox.css:1886802/19

--- a/public/css/popuo-box.css
+++ b/public/css/popuo-box.css
@@ -1,3 +1,4 @@
+/* Not needed? */
 /* Styles for dialog window */
 #small-dialog,#small-dialog1,#small-dialog1,#small-dialog2,#small-dialog3,#small-dialog4,#small-dialog5,#small-dialog6,#small-dialog7,#small-dialog8,#small-dialog9{
 	background:#fff;
