🐠🐒 Checkpoint ./views/header.ejs:1886802/2449

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -77,78 +77,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								<li class="nav-item">
 									<a href="portfolio" class="nav-link">Portfolio</a>
 								</li>
-								<li class="dropdown-submenu">
-									<a tabindex="-1" href="#" class="nav-link">Blog</a>
-									<ul class="dropdown-menu">
-										<li class="dropdown-submenu">
-											<a href="#" class="nav-link">Layout 1</a>
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="blog3_style1" class="nav-link">Left Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog3_style2" class="nav-link">Right Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog3_style3" class="nav-link">Without Sidebar</a>
-												</li>
-											</ul>
-										</li>
-										<li class="dropdown-submenu">
-											<a href="#" class="nav-link">Layout 2</a>
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="blog2_style1" class="nav-link">Left Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog2_style2" class="nav-link">Right Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog2_style3" class="nav-link">Without Sidebar</a>
-												</li>
-											</ul>
-										</li>
-										<li class="dropdown-submenu">
-											<a href="#" class="nav-link">Layout 3</a>
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="blog_row_style1" class="nav-link">Left Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog_row_style2" class="nav-link">Right Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog_row_style3" class="nav-link">Without Sidebar</a>
-												</li>
-											</ul>
-										</li>
-										<li class="dropdown-submenu">
-											<a href="#" class="nav-link">Layout 4</a>
-											<ul class="dropdown-menu">
-												<li class="nav-item">
-													<a href="blog_col_style1" class="nav-link">Left Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog_col_style2" class="nav-link">Right Sidebar</a>
-												</li>
-												<li class="nav-item">
-													<a href="blog_col_style3" class="nav-link">Without Sidebar</a>
-												</li>
-											</ul>
-										</li>
-									</ul>
-								</li>
 								<li class="nav-item">
-									<a href="soon" class="nav-link">Coming soon</a>
+									<a href="blog" class="nav-link">Blog</a>
 								</li>
 								<li class="nav-item">
 									<a href="maintenance" class="nav-link">Maintenance</a>
 								</li>
 								<li class="nav-item">
 									<a href="error" class="nav-link">404</a>
-								</li>
-								<li class="nav-item">
-									<a href="typo" class="nav-link">Typography</a>
 								</li>
 							</ul>
 						</li>
