🐝🍧 Checkpoint ./views/footer.ejs:2522170/707

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -267,12 +267,29 @@
 	</script>
 	<!-- move-top -->
 	<script src="js/move-top.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 	<!-- easing -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.1.2/jquery.easing.min.js" integrity="sha256-NBEaYAimJN8qZWE/WaylrkyQpNRfiF1PNs77yHaLsnk=" crossorigin="anonymous"></script>
 	<!-- smooth scroll -->
 	<script src="js/SmoothScroll.min.js"></script>
 	<!--  necessary snippets for few javascript files -->
 	<script src="js/AVBank.js"></script>
+<script src="js/accountVue.js"></script>
+<script src="js/jquery-2.2.3.min.js"></script>
+<!--  magnific-popup  -->
+<!-- <script src="js/jquery.magnific-popup.js"></script> -->
+<!-- move-top -->
+<script src="js/move-top.js"></script>
+<!-- easing -->
+<script src="js/easing.js"></script>
+<!-- smooth scroll -->
+<script src="js/SmoothScroll.min.js"></script>
+<!--  necessary snippets for few javascript files -->
+<script src="js/Avbank.js"></script>
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.js "></script>
+<script src="js/OktaAuth.js "></script>
 	<!-- Bootstrap Core JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
