--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -30,6 +30,33 @@
     </div>
   </div>
 </div>
+<!-- //test description -->
+<div class="modal fade general-modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg general-modal" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Your Security Preferences</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body general-modal">
+        <center>
+          <h3>Your Enrolled Factors</h3>
+          <br>
+          <div id="factorsApp" class="btn-group-vertical">
+            <factor-item v-for="factor in factors" :factor="factor" :key="factor._id"/>
+          </div>
+          <br>
+          <br>
+          <button class='btn btn-danger' onclick="resetMfa()">reset MFA</button>
+          <button class='btn btn-danger' onclick="reEnroll()">renroll</button>
+        </center>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- //andrew description -->
 <!-- //title description -->
 <!-- Services section -->
 <section class="wfour-row py-sm-5 pt-3 slide-bg position-relative transactions" id="we_offer_agile">
