🐫🍎 Checkpoint ./routes/index.js:2522170/15 ./views/header.ejs:2522170/10

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -111,7 +111,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								window.location = "/accountPage"
 							}
 							</script>
-           <% if(user){ %>
+           <% if(test){ %>
              <h1>foo</h1>
             <% } else{ %>  
              	<button id="login" onclick="toLogin()" type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false">
