--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -57,6 +57,23 @@
   </div>
 </div>
 <!-- //andrew description -->
+<!-- //MFA Enroll Widget Modal -->
+<div class="modal fade general-modal" id="exampleModal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel1">Sign In to Renenroll</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body general-modal">
+        <div id="okta"></div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- //andrew description -->
 <!-- //title description -->
 <!-- Services section -->
 <section class="wfour-row py-sm-5 pt-3 slide-bg position-relative transactions" id="we_offer_agile">
