⛰🎂 Checkpoint ./public/js/oktaNormalLogin.js:2522170/1164 ./views/header.ejs:2522170/355

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -119,6 +119,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
              	<button id="login" onclick="toLogin()" type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false">
 								Login
 							</button>
+              <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" data-target="#exampleModal" aria-pressed="false">
+							  Second Login
+							</button>
                 <% } %>
 						</li>
 					</ul>
