🍺🎮 Checkpoint ./views/header.ejs:2522170/1468 ./views/footer.ejs:2522170/63

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -113,7 +113,7 @@
 				<!-- footer grid4  -->
 				<div class="col-lg-3  col-sm-6 footv3-left my-lg-0 mt-5">
 					<h3 class="mb-3">subscribe to newsletter</h3>
-					<form action="#" method="post">
+					<form method="post">
 						<div class="form-group">
 							<input type="email" class="form-control  bg-dark border-0" id="email" placeholder="Enter email" name="email" required>
 						</div>
@@ -144,7 +144,7 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<form action="#" method="post">
+					<form id="loginForm" method="post">
 						<div class="form-group">
 							<label for="recipient-name" class="col-form-label">Username</label>
 							<input type="text" class="form-control border" placeholder=" " name="Name" id="recipient-name" required="">
