--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -144,7 +144,7 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<form id="loginForm" method="post">
+					<form id="loginForm">
 						<div class="form-group">
 							<label for="recipient-name" class="col-form-label">Username</label>
 							<input type="text" class="form-control border" placeholder=" " name="Name" id="recipient-name" required="">
@@ -154,7 +154,7 @@
 							<input type="password" class="form-control border" placeholder=" " name="Password" id="password" required="">
 						</div>
 						<div class="right-w3l">
-							<input type="submit" class="form-control border text-white" value="Login">
+							<input onclick="do_login()" class="form-control border text-white" value="Login">
 						</div>
 						<div class="row sub-w3l my-3">
 							<div class="col sub-agile">
