--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -144,6 +144,66 @@
 					</button>
 				</div>
 				<div class="modal-body">
+          <script>
+          var config = {
+  url: 'https://login.vanbeeklabs.com',
+  tokenManager: {
+    storage: 'sessionStorage'
+  },
+  issuer: 'https://login.vanbeeklabs.com/oauth2/default',
+  clientId: '0oahikuahrKHsYSTZ0h7',
+  redirectUri: 'http://localhost:3000/authorization-code/callback',
+
+  // Override the default authorize and userinfo URLs
+  authorizeUrl: 'https://login.vanbeeklabs.com/oauth2/default/v1/authorize',
+  userinfoUrl: 'https://login.vanbeeklabs.com/oauth2/default/v1/userinfo'
+};
+
+var validationOptions = {
+  issuer: 'https://login.vanbeeklabs.com/oauth2/default'
+}
+
+
+var authClient = new OktaAuth(config);
+window.alert("TEST")
+$( document ).ready(function() {
+  $("#loginForm").submit(function( event ) {
+    event.preventDefault();
+  });
+})
+
+authClient.session.get()
+.then(function(session) {
+  console.log(session)
+})
+.catch(function(err) {
+  // not logged in
+});
+
+var do_login = function() {
+  
+  authClient.signIn({
+    username: $("input[name='Name']").val(),
+    password: $("input[name='Password']").val()
+  })
+  .then(function(transaction) {
+    if (transaction.status === 'SUCCESS') {
+      // Step #1: get sessionToken
+      console.log('sessionToken = ', transaction.sessionToken);
+
+      authClient.session.setCookieAndRedirect(transaction.sessionToken, "http://localhost:3000/accountPage");
+
+    } else {
+      throw 'We cannot handle the ' + transaction.status + ' status';
+    }
+  })
+  .fail(function(err) {
+    console.error(err);
+  });
+}
+
+  
+          </script>
 					<form id="loginForm">
 						<div class="form-group">
 							<label for="recipient-name" class="col-form-label">Username</label>
@@ -153,9 +213,9 @@
 							<label for="password" class="col-form-label">Password</label>
 							<input type="password" class="form-control border" placeholder=" " name="Password" id="password" required="">
 						</div>
-						<div class="right-w3l">
-							<input onclick="do_login()" class="form-control border text-white" value="Login">
-						</div>
+						  <div class="right-w3l">
+                <input onclick="do_login()" type="submit" class="form-control border text-white" value="Login">
+              </div>
 						<div class="row sub-w3l my-3">
 							<div class="col sub-agile">
 								<input type="checkbox" id="brand1" value="">
