🎩😎 Checkpoint ./routes/index.js:1886802/230 ./views/noEnv.ejs:1886802/62 ./server.js:1886802/1752

--- a/views/noEnv.ejs
+++ b/views/noEnv.ejs
@@ -1,4 +1,5 @@
-
+<%- include('header') -%>
 	<section class="py-sm-5 py-3">
   Error: The .env file is empty.  
 	</section>
+<%- include('footer') -%>
