--- a/views/noEnv.ejs
+++ b/views/noEnv.ejs
@@ -1,5 +1,18 @@
 <%- include('header') -%>
-	<section class="py-sm-5 py-3">
-  Error: The .env file is empty.  
-	</section>
+    <!-- title description-->
+    <div class="container py-sm-5 py-3">
+        <div class="row py-lg-5">
+
+            <div class="col-lg-5  bb-left">
+                <h3 class="agile-title">our services</h3>
+            </div>
+            <div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
+                <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla
+                    accumsan ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                    Class aptent taciti sociosqu ad litora torquent p himenaeos.</p>
+                <a class="btn btn-danger  mt-sm-4  text-capitalize" href="portfolio" role="button">read more</a>
+            </div>
+        </div>
+    </div>
+    <!-- //title description -->
 <%- include('footer') -%>
