🎩☺️ Checkpoint ./views/noEnv.ejs:1886802/839 ./views/footer.ejs:1886802/56 ./server.js:1886802/264

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -165,7 +165,8 @@ var validationOptions = {
 
 
 var authClient = new OktaAuth(config);
-window.alert("TEST")
+//// jpf commented out
+// window.alert("TEST")
 $( document ).ready(function() {
   $("#loginForm").submit(function( event ) {
     event.preventDefault();
