--- a/views/noEnv.ejs
+++ b/views/noEnv.ejs
@@ -4,13 +4,13 @@
         <div class="row py-lg-5">
 
             <div class="col-lg-5  bb-left">
-                <h3 class="agile-title">our services</h3>
+                <h3 class="agile-title">application not configured</h3>
             </div>
             <div class="col-lg-7 mt-lg-0 mt-3 px-lg-5">
-                <p>Donec consequat sapien ut leo cursus rhoncus. Nullam dui mi, vulputate ac metus at, semper varius orci. Nulla
-                    accumsan ac elit in congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
-                    Class aptent taciti sociosqu ad litora torquent p himenaeos.</p>
-                <a class="btn btn-danger  mt-sm-4  text-capitalize" href="portfolio" role="button">read more</a>
+                <p>This application has not been configured.
+                   Before you can use this application, you need to edit the settings located in the in the <tt>.env</tt> file 
+                   for this project.</p>
+                <a class="btn btn-primary mt-sm-4" href="<%= assetsUrl %>" role="button">Edit .env settings now</a>
             </div>
         </div>
     </div>
