🐺🦁 Checkpoint ./views/header.ejs:1886802/134 ./server.js:1886802/23

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -111,18 +111,19 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 								window.location = "/accountPage"
 							}
 							</script>
-           <% if(user){ %>
+           <!-- Use locals.user here to avoid an error if "user" isn't defined. -->
+           <% if(locals.user){ %>
             <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false" data-target="#exampleModal">
               Security Settings
             </button>
-            <% } else{ %>  
+           <% } else{ %>  
              	<button id="login" onclick="toLogin()" type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" aria-pressed="false">
 								Login
 							</button>
               <button type="button" class="btn btn-danger ml-lg-5 w3ls-btn" data-toggle="modal" data-target="#exampleModal" aria-pressed="false">
 							  Second Login
 							</button>
-                <% } %>
+          <% } %>
 						</li>
 					</ul>
 				</div>
