🏰👠 Checkpoint ./views/header.ejs:1886802/19 ./views/footer.ejs:1886802/202

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -27,7 +27,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
   <!-- Magnific Popup -->
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.9.9/magnific-popup.css" integrity="sha256-vykRtEx/oLFzSrbwO4y0YkXO9988343rDJoa2MYpS3s=" crossorigin="anonymous" /> -->
 	<!-- popup box -->
-	<link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" />
+	<!-- <link href="css/popuo-box.css" rel="stylesheet" type="text/css" media="all" /> -->
 	<!-- Custom CSS -->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 	<!-- font-awesome icons -->
