🚪🐽 Checkpoint ./public/js/oktaAuth.js:1886802/88 ./server.js:1886802/874 ./views/header.ejs:1886802/1083

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,7 +50,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 	<!-- //webfonts -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-
+  <script>
+  var config = {
+    url: '<%= oidcConfig.url %>',
+    issuer: '<%= oidcConfig.issuer %>',
+    clientId: '<%= oidcConfig.client_id %>',
+    redirectUri: '<%= oidcConfig.redirect_uri%>',
+};
+  </script>
 </head>
 
 <body>
