🐕😾 Checkpoint ./views/header.ejs:1886802/67 ./public/js/oktaAuth.js:1886802/129

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -56,6 +56,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     issuer: '<%= oidcConfig.issuer %>',
     clientId: '<%= oidcConfig.client_id %>',
     redirectUri: '<%= oidcConfig.redirect_uri%>',
+    tokenManager: {
+      storage: 'sessionStorage'
+    },
 };
   </script>
 </head>
