🍧👂 Checkpoint ./views/footer.ejs:2522170/136 ./routes/index.js:2522170/75

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -330,6 +330,7 @@ var do_login = function() {
 <!-- Bootstrap Core JavaScript -->
 <!-- <script src="/js/bootstrap.js "></script> -->
 <script src="/js/oktaAuth.js "></script>
+<script src="/js/oktaNormalLogin.js "></script>
 </body>
 
 </html>
