--- a/views/accountPage.ejs
+++ b/views/accountPage.ejs
@@ -11,8 +11,8 @@
 <%- include partials/smsMfaModal.ejs %>
 <%- include partials/openAccount.ejs %>
 <div class="services-bot-agile2 py-sm-5 py-3">
-  <button type="button" onclick="openAccount()" class="btn btn-danger btn-lg float-right">Open Account</button>
-  <button type="button" class="btn btn-outline-info btn-sm" data-toggle="modal" data-target="#tokenModal">OAuth details</button>
+  <button type="button" class="btn btn-danger btn-lg float-right av-button" onclick="openAccount()">Open Account</button>
+  <button type="button" class="btn btn-danger btn-lg float-right av-button" data-toggle="modal" data-target="#tokenModal">View Tokens</button>
 
   <div class="row py-lg-5">
 
