🚗🎖 Checkpoint ./public/css/style.css:1886802/9 ./TODO.md:1886802/244

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 */
 
-// [jpf] Makes the token viewer modal dialog bigger
+/* [jpf] Makes the token viewer modal dialog bigger */
 .modal-dialog {
   max-width: 1000px;
 }
