❣️📷 Checkpoint ./routes/index.js:1886802/39 ./TODO.md:1886802/103 ./views/maintenance.ejs:1886802/174 ./views/noEnv.ejs:1886802/20

--- a/views/noEnv.ejs
+++ b/views/noEnv.ejs
@@ -10,7 +10,7 @@
                 <p>This application has not been configured.
                    Before you can use this application, you need to edit the settings located in the in the <tt>.env</tt> file 
                    for this project.</p>
-                <a class="btn btn-primary mt-sm-4" href="<%= assetsUrl %>" role="button">Edit .env settings now</a>
+                <a class="btn btn-primary mt-sm-4" href="<%= envEditLink %>" role="button">Edit .env settings now</a>
             </div>
         </div>
     </div>
