🙌🐟 Checkpoint ./views/footer.ejs:1886802/1168

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,18 +5,23 @@
 			<div class="row py-5">
 				<div class="col-md-4">
 					<img src="<%= assetsUrl %>f1.png" alt="" class="img-fluid">
-					<h4 class="feed-title my-3">Email and Live chat
-						<span>24/7</span>
+					<h4 class="feed-title my-3">Email and Live Chat
+						<span>24/0</span>
 					</h4>
-					<p> ligula sed magna as ultriciesDonec rutrum congue leo eget.</p>
+					<p>This is just a sample application, it has no support</p>
 				</div>
 				<div class="col-md-4 my-md-0 my-4">
 					<img src="<%= assetsUrl %>f2.png" alt="" class="img-fluid">
-					<h4 class="feed-title my-3">any query or clarifiactions?
-						<span>call us</span>
+					<h4 class="feed-title my-3">Want to learn more?
+						<span>Conact Okta</span>
 					</h4>
-					<p class="mb-0">+ 10 000 12345 </p>
-					<p>+ 10 000 12346 </p>
+          <p>
+            USA: (800) 588-1656
+            
+            Europe: +44 (800) 3688930
+            
+            Australia: +61 283104484
+          </p>
 				</div>
 				<div class="col-md-4">
 					<img src="<%= assetsUrl %>f3.png" alt="" class="img-fluid">
@@ -42,6 +47,11 @@
 							AVBank
 						</a>
 					</h2>
+          <div class="fv3-contact">
+            <p>
+              A sample application from your friends at Okta
+            </p>
+          </div>
 					<div class="fv3-contact mt-3">
 						<span class="fas fa-home mr-2"></span>
 						<p>90 Street, City, State 34789.</p>
@@ -321,10 +331,6 @@ var do_login = function() {
 <script src="/js/accountVue.js"></script>
 <!-- move-top -->
 <script src="/js/move-top.js"></script>
-<!-- easing -->
-<!-- <script src="/js/easing.js"></script> -->
-<!-- smooth scroll -->
-<script src="/js/SmoothScroll.min.js"></script>
 <!--  necessary snippets for few javascript files -->
 <script src="/js/AVBank.js"></script>
 <!-- Bootstrap Core JavaScript -->
